--- a/style.css
+++ b/style.css
@@ -216,10 +216,13 @@ main {
 
 .close {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 0;          
+    right: 15px;  
     font-size: 24px;
     cursor: pointer;
+    margin: 0;    
+    padding: 0;   
+    z-index: 10; 
 }
 
 .cart-item {
@@ -292,3 +295,4 @@ main {
     font-size: 24px;
     cursor: pointer;
 }
+
